<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.StartScreenActivity">

        <TextView
            android:id="@+id/passwordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mNewUserName"
            android:layout_alignLeft="@id/mNewUserName"
            android:layout_marginStart="0dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/kameron_bold"
            android:text="Password: "
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/SignUpTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/kameron_bold"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/userNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/SignUpTitle"
            android:layout_alignLeft="@id/mNewUserName"
            android:layout_marginStart="0dp"
            android:layout_marginTop="75dp"
            android:fontFamily="@font/kameron_bold"
            android:text="User Name: "
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/mNewUserName"
            android:layout_width="368dp"
            android:layout_height="48dp"
            android:layout_below="@id/userNameTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="11dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="username"
            android:inputType="textPersonName"
            android:maxLength="16"
            android:maxLines="1" />

        <EditText
            android:id="@+id/mNewPassword"
            android:layout_width="368dp"
            android:layout_height="48dp"
            android:layout_below="@id/passwordTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="11dp"
            android:ems="10"
            android:hint="password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/reEnterPasswordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mNewPassword"
            android:layout_alignLeft="@id/mNewUserName"
            android:layout_marginStart="0dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/kameron_bold"
            android:text="@string/re_enter_password"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"

            android:textSize="24sp" />

        <EditText
            android:id="@+id/mNewPasswordReEnter"
            android:layout_width="368dp"
            android:layout_height="48dp"
            android:layout_below="@id/reEnterPasswordTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="11dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="298dp"
            android:layout_height="74dp"
            android:layout_below="@id/mNewPasswordReEnter"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="75dp"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:background="@color/red_255"
            android:textSize="34sp" />

    </RelativeLayout>
</ScrollView>