<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.StartScreenActivity">

    <TextView
        android:id="@+id/passwordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mUserName"
        android:layout_alignStart="@id/mUserName"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/kameron_bold"
        android:text="@string/PasswordColon"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"

        android:textSize="24sp" />

    <TextView
        android:id="@+id/LogInTitle"
        android:layout_width="wrap_content"
        android:layout_height="88dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/kameron_bold"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"

        android:textSize="48sp" />

    <TextView
        android:id="@+id/userNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/LogInTitle"
        android:layout_alignStart="@id/mUserName"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/kameron_bold"
        android:text="@string/User_NameColon"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"

        android:textSize="24sp" />

    <EditText
        android:id="@+id/mUserName"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/userNameTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:width="368dp"
        android:autofillHints=""
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/mPassword"
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:layout_below="@id/passwordTitle"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="298dp"
        android:layout_height="60dp"
        android:layout_below="@id/mPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="56dp"
        android:layout_marginTop="200dp"
        android:background="@color/red_255"
        android:textColor="@color/black"
        android:text="@string/log_in"
        android:textSize="34sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

</RelativeLayout>