...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/SignUpButton"
            android:layout_width="354dp"
            android:layout_height="86dp"
            android:layout_marginTop="60dp"
            android:background="@color/red_255"

            android:text="@string/create_account"
            android:textColor="#000000"
            android:textSize="24sp" />

        <Button
            android:id="@+id/LogInButton"
            android:layout_width="354dp"
            android:layout_height="86dp"
            android:layout_marginTop="60dp"
            android:background="@color/red_255"
            android:text="@string/log_in"
            android:textColor="#000000"
...
